--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,31 @@
 {% extends 'base.html' %}
 
-{% block title %} Welcome to my page {% endblock %}
+{% block title %} Simple Loan Calculator {% endblock %}
 
 {% block body %} 
 
 <h1>Simple Loan Calculator</h1>
 <hr>
 
-<form method="POST" action="/mthlyPmt">
+<form method="POST" action="/mthlyPmt" id="calculateLoan">
     <label for="loanAmt">Loan Amount:</label><br>
-    <input type="text" id="loanAmt" name="loanAmt"><br>
+    <input type="text" id="loanAmt" name="loanAmt" placeholder="in $USD" required autofocus><br>
 <br>
     <label for="lengthOfLoan">Length of Loan:</label><br>
-    <input type="text" id="lengthOfLoan" name="lengthOfLoan">
+    <input type="text" id="lengthOfLoan" name="lengthOfLoan" placeholder="in years" required><br>
+<br>
+    <label for="intRate">Interest Rate:</label><br>
+    <input type="text" id="intRate" name="intRate" placeholder=".05" required><br>
+<br>
+<br>
+<input type="submit" value="Submit">
 </form>
+
+<br><br>
+{% if mnthlyPmt %}
+
+    <p>Your monthly payment is: {{ mnthlyPmt }}</p>
+
+{% endif %}
 
 {% endblock %}
