--- a/templates/monthlyPayment.html
+++ b/templates/monthlyPayment.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
-{% block title %} Welcome to Emily's Page {% endblock %}
+{% block title %} Monthly Payment {% endblock %}
 
 {% block body %} It's Emily! {% endblock %}
